--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,8 @@ sniffio==1.3.0
 starlette==0.26.1
 typing_extensions==4.5.0
 uvicorn==0.21.0
+tensorflow
+matplotlib
+mtcnn
+git+https://github.com/nShravankg/Keras_Vggface.git
+keras_applications
