--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "jose": "^4.13.1",
+    "js-cookie": "^3.0.1",
+    "js-cookies": "^1.0.4",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
